Enhance Pet Inspection and Tribute Orbital Effects
- Updated PetInspectionManager to use ConcurrentHashMap for thread-safe inspection state tracking.
- Improved comments for clarity in PetInspectionManager.
- Optimized TributeOrbitalEffects with clearer comments and performance considerations.
- Added new scout-related abilities and goals, including scout spotter, loot scurry, and treasure sense.
- Introduced new emotional cues and gossip lines for pets.
- Implemented sound effects for the "release the hounds" ability.
- Updated scout role to include default abilities and level rewards.